--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-li {
-  list-style: none;
-}
-
-li a, a {
+a {
   text-decoration: none;
   color: #000;
+}
+
+li a {
+  list-style: none;
 }
 
 .navbar {
@@ -29,7 +29,7 @@ li a, a {
 
 .navbar,
 .home {
- padding: 0 30px;
+  padding: 0 30px;
 }
 
 .brand {
@@ -80,7 +80,7 @@ li a, a {
 }
 
 .home-text-second {
- font-size: 16px;
+  font-size: 16px;
   color: #000;
   text-align: justify;
 }
@@ -135,6 +135,7 @@ li a, a {
   font-size: 18px;
   color: #000;
   text-align: justify;
+
   /* margin: 15rem 5rem; */
   padding: 8rem 20rem;
 }
